# sdl_learning

./: CMakeLists.txt
assets/: monkey.gltf
shaders/: base.frag  base.frag.spv  base.vert  base.vert.spv
src/: main.cpp  main.hpp
